--- a/public/login.html
+++ b/public/login.html
@@ -11,7 +11,7 @@
     <meta name="robots" content="index"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/login.css">
+	<link rel="stylesheet" type="text/css" href="../css/login.css">
 	<script type="text/javascript" src='js/react.js'></script>
 	<script type="text/javascript" src='js/react-dom.js'></script>
 	<script type="text/javascript" src='js/browser.min.js'></script>
