--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,14 @@
 		<!-- 温度计 -->
 		<div class="index_container_turn_thermograph">
 			<div class="index_container_turn_grayround"></div>
-			<div class="index_container_turn_greenrect"></div>
+			<div class="index_container_turn_greenrect">
+				<ul class="index_choose">
+					<li>1</li>
+					<li>2</li>
+					<li>3</li>
+					<li>4</li>
+				</ul>
+			</div>
 			<div class="index_container_turn_greenround"></div>
 		</div>
 		<!-- 图片 -->
@@ -100,6 +107,7 @@
 	<!-- 热度区二 -->
 	<div class="index_container_hottwo index_container_hot">
 		<div class="index_container_hottwo_line index_container_line"></div>
+		<div class="index_container_hottwo_r1"></div>
 		<div class="index_container_picwrap">
 			<div class="index_container_pic">
 				<img src="img/img2_1.jpg">
@@ -147,6 +155,8 @@
 	<!-- 热度区三 -->
 	<div class="index_container_hotthree index_container_hot">
 		<div class="index_container_hotthree_line index_container_line"></div>
+		<div class="index_container_hotthree_r1"></div>
+		<div class="index_container_hotthree_r2"></div>
 		<div class="index_container_picwrap">
 			<div class="index_container_pic">
 				<img src="img/img3_1.jpg">
@@ -190,11 +200,18 @@
 			</div>
 		</div>
 	</div>	
-</div>	
 </div>
+
+<!-- 音乐	 -->
+<div class="index_music">
+	<img src="img/iconfont-music.png">
+</div>
+<div class="index_music_after"></div>
+
 <footer>
 	<div class="index_foot">copyright © 2016-1 pen man box , powered by guoningyan.com</div>
 </footer>
+</div>
 <script type="text/babel">
 
 </script>	
