--- a/public/comeon.html
+++ b/public/comeon.html
@@ -44,9 +44,23 @@
 	<div class="comeon_glass_right"></div>
 	<div class="comeon_glass_midrect"></div>
 </div>
-<div class="comeon_note"></div>
+<div class="comeon_note">
+<form>
+	<div class="comeon_note_theme">theme:</div>
+	<input type='text' class="comeon_note_themeinput">
+	<div class="comeon_note_describe">describe:</div>
+	<textarea class="comeon_note_describeinput">
+	</textarea>
+	<div class="comeon_note_pic">upload picture:</br>(promise size<200k)</div>
+	<input id='file_pic' type="file"/>
+	</br>
+	<!-- <button type='button'>upload</button> -->
+	<button type='submit' class="comeon_note_submit">ok!</button>
+</form>
+<div class="comeon_pic_show"></div>
 </div>
-<script type="text/babel">
+</div>
+<script type="text/babel" src="js/comeon.js">
 
 </script>	
 </body>
