--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,7 @@
 			<li><img src="img/lunbo_2.jpg"></li>
 			<li><img src="img/lunbo_3.jpg"></li>
 			<li><img src="img/lunbo_4.jpg"></li>
+			<li><img src="img/lunbo_1.jpg"></li>
 		</ul>			
 		</div>
 	</div>
