--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="index"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	
 	<script type="text/javascript" src='js/react.js'></script>
@@ -24,10 +25,10 @@
 <div id="container" class="container">
 <header>
 	<ul class='index_head'>
-		<li class='index_head_pen'>PenManBox</li>
-		<li class='index_head_theme'>theme</li>
-		<li class='index_head_comeon'>来一发</li>
-		<li class='index_head_home'>home</li>
+		<li class='index_head_pen'><a href="index.html">PenManBox</a></li>
+		<li class='index_head_theme'><a href="">theme</a></li>
+		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
+		<li class='index_head_home'><a href="">home</a></li>
 	</ul>
 </header>
 <div class="index_container">
