--- a/public/comeon.html
+++ b/public/comeon.html
@@ -17,7 +17,7 @@
 	<script type="text/javascript" src='js/react.js'></script>
 	<script type="text/javascript" src='js/react-dom.js'></script>
 	<script type="text/javascript" src='js/browser.min.js'></script>
-	<script type="text/javascript" src='js/jquery.min.js'></script>
+	<script type="text/javascript" src='http://code.jquery.com/jquery-latest.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
 	<title>come on baby</title>
 </head>
