link to mongodb

--- a/public/index.html
+++ b/public/index.html
@@ -211,6 +211,7 @@
 
 <footer>
 	<div class="index_foot">copyright © 2016-1 pen man box , powered by guoningyan.com</div>
+	<div class="index_foot"><a href="http://www.miitbeian.gov.cn/">鄂ICP备15020385号</a></div>
 </footer>
 </div>
 <script type="text/babel">
