--- a/public/login.html
+++ b/public/login.html
@@ -11,6 +11,7 @@
     <meta name="robots" content="index"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
+	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/login.css">
 	<script type="text/javascript" src='js/react.js'></script>
 	<script type="text/javascript" src='js/react-dom.js'></script>
@@ -19,6 +20,14 @@
 	<title>身份注册中。。。</title>
 </head>
 <body>
+<header>
+	<ul class='index_head'>
+		<li class='index_head_pen'><a href="index.html">PenManBox</a></li>
+		<li class='index_head_theme'><a href="">theme</a></li>
+		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
+		<li class='index_head_home'><a href="">home</a></li>
+	</ul>
+</header>
 <div id="container" class="container"></div>
 <script type="text/babel" src="js/login.js">
 
