less add media quary

--- a/public/login.html
+++ b/public/login.html
@@ -8,7 +8,7 @@
     <meta name="description" content="you are funny"/>
     <meta name="keywords" content="fuckyou"/>
     <meta name="author" content="ginny, gny315@163.com"/>
-    <meta name="robots" content="index"/>
+    <meta name="robots" content="login"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
