--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <meta name="author" content="ginny, gny315@163.com"/>
     <meta name="robots" content="index"/>
     <meta name="viewport" content="initial-scale=1, maximum-scale=3, minimum-scale=1, user-scalable=no">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="apple-mobile-web-app-status-bar-style" content="blank"/>
+    <meta name="format-detection" content="telephone=no"/>
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
@@ -19,6 +22,10 @@
 	<script type="text/javascript" src='js/browser.min.js'></script>
 	<script type="text/javascript" src='js/jquery.min.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
+
+	<!--[if lt IE9]>
+	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
+	<![endif]-->
 	<title>pen man box</title>
 </head>
 <body>
