--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src='js/browser.min.js'></script>
 	<script type="text/javascript" src='js/jquery.min.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
+	<script type="text/javascript" src='http://leaverou.github.com/prefixfree/prefixfree.min.js'></script>
 
 	<!--[if lt IE9]>
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
