--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<link rel="stylesheet" type="text/css" href="vendor/mocha.css">
 	
 	<script type="text/javascript" src='js/react.js'></script>
 	<script type="text/javascript" src='js/react-dom.js'></script>
@@ -222,8 +223,10 @@
 	<div class="index_foot"><a href="http://www.miitbeian.gov.cn/">鄂ICP备15020385号</a></div>
 </footer>
 </div>
-<script type="text/babel">
-
+<script type="text/javascript" src="vendor/mocha.js"></script>
+<script type="text/javascript" src="vendor/chai.js"></script>
+<script type="text/javascript">
+	mocha.run();
 </script>	
 </body>
 </html>
