--- a/public/comeon.html
+++ b/public/comeon.html
@@ -17,9 +17,9 @@
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/comeon.css">
 	
-	<script type="text/javascript" src='js/react.js'></script>
-	<script type="text/javascript" src='js/react-dom.js'></script>
-	<script type="text/javascript" src='js/browser.min.js'></script>
+	<script type="text/javascript" src='js/lib/react.js'></script>
+	<script type="text/javascript" src='js/lib/react-dom.js'></script>
+	<script type="text/javascript" src='js/lib/browser.min.js'></script>
 	<script type="text/javascript" src='http://code.jquery.com/jquery-latest.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
 	<title>come on baby</title>
