--- a/public/login.html
+++ b/public/login.html
@@ -16,10 +16,10 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/login.css">
-	<script type="text/javascript" src='js/react.js'></script>
-	<script type="text/javascript" src='js/react-dom.js'></script>
-	<script type="text/javascript" src='js/browser.min.js'></script>
-	<script type="text/javascript" src='js/jquery.min.js'></script>
+	<script type="text/javascript" src='js/lib/react.js'></script>
+	<script type="text/javascript" src='js/lib/react-dom.js'></script>
+	<script type="text/javascript" src='js/lib/browser.min.js'></script>
+	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
 	<title>身份注册中。。。</title>
 </head>
 <body>
