--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,10 @@
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	
-	<script type="text/javascript" src='js/react.js'></script>
-	<script type="text/javascript" src='js/react-dom.js'></script>
-	<script type="text/javascript" src='js/browser.min.js'></script>
-	<script type="text/javascript" src='js/jquery.min.js'></script>
+	<script type="text/javascript" src='js/lib/react.js'></script>
+	<script type="text/javascript" src='js/lib/react-dom.js'></script>
+	<script type="text/javascript" src='js/lib/browser.min.js'></script>
+	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
 	<script type="text/javascript" src='http://leaverou.github.com/prefixfree/prefixfree.min.js'></script>
 
