--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,7 @@
 	<script type="text/javascript" src='js/lib/browser.min.js'></script>
 	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
+	<script type="text/javascript" src='js/index_app.js'></script>
 	<script type="text/javascript" src='http://leaverou.github.com/prefixfree/prefixfree.min.js'></script>
 
 	<!--[if lt IE9]>
@@ -39,6 +40,7 @@
 		<li class='index_head_home'><a href="">home</a></li>
 	</ul>
 </header>
+
 <div class="index_container">
 	<!-- 轮播图 -->
 	<div class="index_container_turn">
@@ -208,19 +210,32 @@
 				</div>
 			</div>
 		</div>
-	</div>	
+	</div>
 </div>
+<footer>
+	<ul>
+		<li>
+			<div>站长:<a href="">@ginny小胖子要当个梦想家</a></div>
+			<div>特别鸣谢:<a href="">@少侠不是令狐</a></div>
+		</li>
+		<li>
+			<div class="index_foot">copyright © 2016-1 penmanbox.com</div>
+			<div class="index_foot"><a href="http://www.miitbeian.gov.cn/">鄂ICP备15020385号</a></div>
+		</li>
+		<li>
+			<img src="img/penmanbox.svg">
+		</li>
+	</ul>
+</footer>	
+
 
 <!-- 音乐	 -->
-<div class="index_music">
+<!-- <div class="index_music">
 	<img src="img/iconfont-music.png">
 </div>
-<div class="index_music_after"></div>
+<div class="index_music_after"></div> -->
 
-<footer>
-	<div class="index_foot">copyright © 2016-1 pen man box , powered by guoningyan.com</div>
-	<div class="index_foot"><a href="http://www.miitbeian.gov.cn/">鄂ICP备15020385号</a></div>
-</footer>
+
 </div>
 </body>
 </html>
