add 404 and 500 html

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
+	<script type="text/javascript" src='js/testUrl.js'></script>
 	
 	<script type="text/javascript" src='js/lib/react.js'></script>
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
@@ -227,14 +228,6 @@
 		</li>
 	</ul>
 </footer>	
-
-
-<!-- 音乐	 -->
-<!-- <div class="index_music">
-	<img src="img/iconfont-music.png">
-</div>
-<div class="index_music_after"></div> -->
-
 
 </div>
 </body>
