--- a/public/temp.html
+++ b/public/temp.html
@@ -110,6 +110,50 @@
         <div class="index_picture_padding"></div>
 	</div>
 </div>
+
+
+<!-- 音乐	 -->
+<!-- <div class="index_music">
+	<img src="img/iconfont-music.png">
+</div>
+<div class="index_music_after"></div> -->
+
+<!-- .index_music{
+	width: 4rem;
+	height: 4rem;
+	background-color: #000;
+	opacity: 0.8;
+	position: fixed;
+	bottom:5rem;
+	right: 0;
+	text-align: center;
+	line-height: 5rem;
+	img{
+		width: 50%;
+		margin-top: 1rem;
+	}
+}
+
+.index_music_after:before{
+	content: '>';
+	width: 2rem;
+	height: 5rem;
+	line-height: 5rem;
+	color: @color_gray;
+	position: fixed;
+	right: 33rem;
+	font-size: 3rem;
+}
+.index_music_after{
+	width: 35rem;
+	height: 5rem;
+	background-color: rgba(0, 0, 0, 0.8);
+	color:@color_gray;
+	position: fixed;
+	bottom: 4.5rem;
+	right: 0;
+} -->
+
 <script type="text/babel" src="">
 
 </script>	
