put upload file indb

--- a/public/comeon.html
+++ b/public/comeon.html
@@ -20,7 +20,7 @@
 	<script type="text/javascript" src='js/lib/react.js'></script>
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
 	<script type="text/javascript" src='js/lib/browser.min.js'></script>
-	<script type="text/javascript" src='http://code.jquery.com/jquery-latest.js'></script>
+	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
 	<title>come on baby</title>
 </head>
