--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,7 @@
 			<div class="index_foot"><a href="http://www.miitbeian.gov.cn/">鄂ICP备15020385号</a></div>
 		</li>
 		<li>
-			<img src="img/penmanbox.png">
+			<img src="img/penmanbox3_03.png">
 		</li>
 	</ul>
 </footer>	
