--- a/public/index.html
+++ b/public/index.html
@@ -16,13 +16,11 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<script type="text/javascript" src='js/testUrl.js'></script>
 	
 	<script type="text/javascript" src='js/lib/react.js'></script>
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
 	<script type="text/javascript" src='js/lib/browser.min.js'></script>
 	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
-	<script type="text/javascript" src='js/index.js'></script>
 	<script type="text/javascript" src='js/index_app.js'></script>
 	<script type="text/javascript" src='http://leaverou.github.com/prefixfree/prefixfree.min.js'></script>
 
@@ -39,10 +37,15 @@
 		<li class='index_head_theme'><a href="">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="">home</a></li>
+		<li class="index_log">
+			<a href="">Log in</a>
+			<a href="login.html">&nbsp;&nbsp;New user</a>
+		</li>
 	</ul>
 </header>
 
 <div class="index_container">
+
 	<!-- 轮播图 -->
 	<div class="index_container_turn">
 		<!-- 温度计 -->
@@ -69,149 +72,9 @@
 		</div>
 	</div>
 
-	<!-- 热度区一 -->
-	<div class="index_container_hotone index_container_hot">
-	<div class="index_container_hotone_line index_container_line"></div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img1_1.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img1_2.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img1_3.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- 热度区二 -->
-	<div class="index_container_hottwo index_container_hot">
-		<div class="index_container_hottwo_line index_container_line"></div>
-		<div class="index_container_hottwo_r1"></div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img2_1.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img2_2.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img2_3.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<!-- 热度区三 -->
-	<div class="index_container_hotthree index_container_hot">
-		<div class="index_container_hotthree_line index_container_line"></div>
-		<div class="index_container_hotthree_r1"></div>
-		<div class="index_container_hotthree_r2"></div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img3_1.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img3_2.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-		<div class="index_container_picwrap">
-			<div class="index_container_pic">
-				<img src="img/img3_3.jpg">
-			</div>
-			<div class="index_container_word">
-				<div class="index_container_author">
-					<img src="img/roundhead.png">
-				</div>
-				<div class="index_container_describe">
-					<div class="index_container_boss">boss:</div>
-					<div class="index_container_theme">theme:</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<!-- 热度区 -->
+<div class="index_hot" id="index_hot">
+</div>
 </div>
 <footer>
 	<ul>
@@ -230,5 +93,8 @@
 </footer>	
 
 </div>
+<script type="text/babel" src="js/index.js">
+
+</script>	
 </body>
 </html>
