fix login insert mistake

--- a/public/index_p.html
+++ b/public/index_p.html
@@ -18,6 +18,7 @@
 	<script type="text/javascript" src='js/browser.min.js'></script>
 	<script type="text/javascript" src='js/jquery.min.js'></script>
 	<script type="text/javascript" src='js/index.js'></script>
+	<script type="text/javascript" src='http://leaverou.github.com/prefixfree/prefixfree.min.js'></script>
 	<title>pen man box</title>
 </head>
 <body>
