--- a/public/login.html
+++ b/public/login.html
@@ -26,9 +26,9 @@
 <header>
 	<ul class='index_head'>
 		<li class='index_head_pen'><a href="index.html">PenManBox</a></li>
-		<li class='index_head_theme'><a href="">theme</a></li>
+		<li class='index_head_theme'><a href="theme.html">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
-		<li class='index_head_home'><a href="">home</a></li>
+		<li class='index_head_home'><a href="home.html">home</a></li>
 	</ul>
 </header>
 <div id="container" class="container"></div>
