--- a/public/theme.html
+++ b/public/theme.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/register.css">
+	<link rel="stylesheet" type="text/css" href="css/theme.css">
 	
 	<script type="text/javascript" src='js/lib/react.js'></script>
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
@@ -38,63 +38,19 @@
 		<li class='index_head_theme'><a href="theme.html">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
-		<li class="index_log" id="index_log">
-			<a href="">Log in</a>
-			<a href="login.html">&nbsp;&nbsp;New user</a>
-		</li>
 	</ul>
 </header>
 
 <div class="index_container">
 
-	<!-- 轮播图 -->
-	<div class="index_container_turn">
-		<!-- 温度计 -->
-		<div class="index_container_turn_thermograph">
-			<div class="index_container_turn_grayround"></div>
-			<div class="index_container_turn_greenrect">
-				<ul class="index_choose">
-					<li>1</li>
-					<li>2</li>
-					<li>3</li>
-					<li>4</li>
-				</ul>
-			</div>
-			<div class="index_container_turn_greenround"></div>
-		</div>
-		<!-- 图片 -->
-		<div class="index_container_turn_picture" id='turnPic'>
-		<ul >
-			<li><img src="img/lunbo_1.jpg"></li>
-			<li><img src="img/lunbo_2.jpg"></li>
-			<li><img src="img/lunbo_3.jpg"></li>
-			<li><img src="img/lunbo_4.jpg"></li>
-		</ul>			
-		</div>
-	</div>
-
 <!-- 热度区 -->
 <div class="index_hot" id="index_hot">
 </div>
 </div>
-<footer>
-	<ul>
-		<li>
-			<div>站长:<a href="">@ginny小胖子要当个梦想家</a></div>
-			<div>特别鸣谢:<a href="">@少侠不是令狐</a></div>
-		</li>
-		<li>
-			<div class="index_foot">copyright © 2016-1 penmanbox.com</div>
-			<div class="index_foot"><a href="http://www.miitbeian.gov.cn/">鄂ICP备15020385号</a></div>
-		</li>
-		<li>
-			<img src="img/penmanbox3_03.png">
-		</li>
-	</ul>
-</footer>	
 
 </div>
-<script type="text/babel" src="js/index.js"></script>
-<script type="text/babel" src="js/register.js"></script>	
+<script type="text/babel" src="js/theme.js">
+
+</script>	
 </body>
 </html>
