add author to theme

--- a/public/theme.html
+++ b/public/theme.html
@@ -38,6 +38,14 @@
 		<li class='index_head_theme'><a href="theme.html">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
+		<li class="index_log" id="index_log">
+			<div class="theme_search">
+				<input type="text" placeholder="theme search"/>
+				<div class="theme_searchlogo">
+					<img src="">
+				</div>
+			</div>
+		</li>
 	</ul>
 </header>
 
