--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,7 @@
 		<li class='index_head_theme'><a href="theme.html">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
-		<li class="index_log" id="index_log">
-		</li>
+		<li class="index_log" id="index_log"></li>
 	</ul>
 </header>
 
