--- a/public/theme.html
+++ b/public/theme.html
@@ -39,10 +39,10 @@
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
 		<li class="index_log" id="index_log">
-			<div class="theme_search">
-				<input type="text" placeholder="theme search"/>
+			<div>
+				<input type="text" placeholder="theme search" class="theme_search"/>
 				<div class="theme_searchlogo">
-					<img src="">
+					<img src="img/iconfont-search.png">
 				</div>
 			</div>
 		</li>
