add search server

--- a/public/theme.html
+++ b/public/theme.html
@@ -38,14 +38,7 @@
 		<li class='index_head_theme'><a href="theme.html">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
-		<li class="index_log" id="index_log">
-			<div>
-				<input type="text" placeholder="theme search" class="theme_search"/>
-				<div class="theme_searchlogo">
-					<img src="img/iconfont-search.png">
-				</div>
-			</div>
-		</li>
+		<li class="index_log" id="index_log"></li>
 	</ul>
 </header>
 
