--- a/public/home.html
+++ b/public/home.html
@@ -22,14 +22,11 @@
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
 	<script type="text/javascript" src='js/lib/browser.min.js'></script>
 	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
-	<script type="text/javascript" src='js/lib/pubsub.js'></script>
-
 	
-
 	<!--[if lt IE9]>
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
-	<title>look at our theme</title>
+	<title>in my home</title>
 </head>
 <body>
 <div id="container" class="container">
