--- a/public/home.html
+++ b/public/home.html
@@ -16,7 +16,8 @@
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="css/head.css">
 	<link rel="stylesheet" type="text/css" href="css/index.css">
-	<link rel="stylesheet" type="text/css" href="css/theme.css">
+	<link rel="stylesheet" type="text/css" href="css/home.css">
+	<link rel="stylesheet" type="text/css" href="css/register.css">
 	
 	<script type="text/javascript" src='js/lib/react.js'></script>
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
@@ -48,8 +49,7 @@
 </div>
 
 </div>
-<script type="text/babel" src="js/theme.js">
-
-</script>	
+<script type="text/babel" src="js/home.js"></script>
+<script type="text/babel" src="js/register.js"></script>	
 </body>
 </html>
