--- a/public/theme.html
+++ b/public/theme.html
@@ -29,7 +29,7 @@
 	<!--[if lt IE9]>
 	<script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script>
 	<![endif]-->
-	<title>look at our theme</title>
+	<title>so many works!</title>
 </head>
 <body>
 <div id="container" class="container">
