--- a/public/theme.html
+++ b/public/theme.html
@@ -32,25 +32,7 @@
 	<title>so many works!</title>
 </head>
 <body>
-<div id="container" class="container">
-<header>
-	<ul class='index_head'>
-		<li class='index_head_pen'><a href="index.html">PenManBox</a></li>
-		<li class='index_head_theme'><a href="theme.html">theme</a></li>
-		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
-		<li class='index_head_home'><a href="home.html">home</a></li>
-		<li class="index_log" id="index_log"></li>
-	</ul>
-</header>
-
-<div class="index_container">
-
-<!-- 热度区 -->
-<div class="index_hot" id="index_hot">
-</div>
-</div>
-
-</div>
+<div id="container" class="container"></div>
 <script type="text/babel" src="js/theme.js">
 
 </script>	
