--- a/public/home.html
+++ b/public/home.html
@@ -50,6 +50,9 @@
 
 </div>
 <script type="text/babel" src="js/home.js"></script>
-<script type="text/babel" src="js/register.js"></script>	
+<script type="text/babel" src="js/register.js"></script>
+<!-- JiaThis Button BEGIN -->
+<script type="text/javascript" src="http://v3.jiathis.com/code_mini/jiathis_r.js?move=0&amp;btn=r2.gif" charset="utf-8"></script>
+<!-- JiaThis Button END -->	
 </body>
 </html>
