--- a/public/home.html
+++ b/public/home.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 	<meta name="renderer" content="webkit">
 	<meta http-equiv="Cache-Control" content="no-siteapp" />
-    <meta name="description" content="you are funny"/>
+    <meta name="description" content="我在pen man box发布了一个新的作品，快来看看嘛～"/>
     <meta name="keywords" content="fuckyou"/>
     <meta name="author" content="ginny, gny315@163.com"/>
     <meta name="robots" content="index"/>
