--- a/public/login.html
+++ b/public/login.html
@@ -29,6 +29,7 @@
 		<li class='index_head_theme'><a href="theme.html">theme</a></li>
 		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
+		<li class='index_head_login'></li>
 	</ul>
 </header>
 <div id="container" class="container"></div>
