--- a/public/comeon.html
+++ b/public/comeon.html
@@ -21,15 +21,21 @@
 	<script type="text/javascript" src='js/lib/react-dom.js'></script>
 	<script type="text/javascript" src='js/lib/browser.min.js'></script>
 	<script type="text/javascript" src='js/lib/jquery.min.js'></script>
+	<script type="text/javascript" src='js/comeon_app.js'></script>
 	<title>come on baby</title>
 </head>
 <body>
 
 <header>
-	<ul class='index_head'>
+	<ul class='index_head comeon_head'>
 		<li class='index_head_pen'><a href="index.html">PenManBox</a></li>
 		<li class='index_head_theme'><a href="theme.html">theme</a></li>
-		<li class='index_head_comeon'><a href="comeon.html">来一发</a></li>
+		<li class='index_head_comeon comeon_head_comeon'>来一发
+			<ul class="comeon_choosetry">
+				<li class="not"><a href="comeon.html">作品上传</a></li>
+				<li class="not"><a href="onlinepaint.html">在线创作</a></li>
+			</ul>
+		</li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
 		<li class='index_head_login'></li>
 	</ul>
