--- a/public/onlinepaint.html
+++ b/public/onlinepaint.html
@@ -64,10 +64,17 @@
 </div>
 
 <div id="op_page2" class="hidePaint">
+
+<div class="sendPop">
+	<textarea></textarea> 
+	<div id="sendMsg">发送弹幕</div>
+</div>
+    
 <canvas id='mycanvas' class="mycanvas" width='600' height='400'>您的浏览器不支持这个功能</canvas>
 
 <div class="paintSave"><img src="" id="finish"/></div>
 <div class="brush">
+<div class="brush_before">涂鸦工具</div>
 <div class="palette" id="palette">
 	<ul class="palette_one">
 		<li>#8a2be2</li>
@@ -142,10 +149,6 @@
     <span class="caret"></span>
     </div>
     <div id='userlist'></div>
-    <div class="sendPop">
-    	<textarea></textarea> 
-    	<div id="sendMsg">发送弹幕</div>
-    </div>
 </div>
 
 <div id="msgbox" class="msgbox">
