socket is normal

--- a/public/comeon.html
+++ b/public/comeon.html
@@ -33,7 +33,7 @@
 		<li class='index_head_comeon comeon_head_comeon'>来一发
 			<ul class="comeon_choosetry">
 				<li class="not"><a href="comeon.html">作品上传</a></li>
-				<li class="not"><a href="onlinepaint.html">在线创作</a></li>
+				<li class="not"><a href="onlinepaint.html" target="_blank">在线创作</a></li>
 			</ul>
 		</li>
 		<li class='index_head_home'><a href="home.html">home</a></li>
