--- a/public/onlinepaint.html
+++ b/public/onlinepaint.html
@@ -29,15 +29,10 @@
 <header>
 	<ul class='index_head comeon_head'>
 		<li class='index_head_pen'><a href="index.html">PenManBox</a></li>
-		<li class='index_head_theme'><a href="theme.html">theme</a></li>
-		<li class='index_head_comeon comeon_head_comeon'>来一发
-			<ul class="comeon_choosetry">
-				<li class="not"><a href="comeon.html">作品上传</a></li>
-				<li class="not"><a href="onlinepaint.html">在线创作</a></li>
-			</ul>
-		</li>
-		<li class='index_head_home'><a href="home.html">home</a></li>
-		<li class='index_head_login'></li>
+		<li></li>
+		<li>离开这个房间</li>
+		<li></li>
+		<li></li>
 	</ul>
 </header>
 
@@ -69,10 +64,11 @@
 	<textarea></textarea> 
 	<div id="sendMsg">发送弹幕</div>
 </div>
-    
+
 <canvas id='mycanvas' class="mycanvas" width='600' height='400'>您的浏览器不支持这个功能</canvas>
 
 <div class="paintSave"><img src="" id="finish"/></div>
+
 <div class="brush">
 <div class="brush_before">涂鸦工具</div>
 <div class="palette" id="palette">
@@ -138,21 +134,20 @@
 <div class="tool2" id="tool2">
 	<ul>
 		<li>清空</li>
-		<li>保存</li>
+		<li>预览</li>
 	</ul>
 </div>
 </div><!-- brush -->
 
 <div class="onlineChat">
-    <div id='nowinline' type="button"data-toggle="dropdown">
-        在线1人 
+    <div id='nowinline'data-toggle="dropdown">
     <span class="caret"></span>
     </div>
     <div id='userlist'></div>
 </div>
 
 <div id="msgbox" class="msgbox">
-    <p class="msgboxP">11111</p>
+  <p class="msgboxP"></p>
 </div>
 </div><!-- op_page2 -->
 
